2001-02-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* router/rfc822.c, router/rtsyslog.c:
	    Added the time to process the message to the router syslog
	    report.  Both 'delay' and 'xdelay' just like at the TA's.
	    'delay' is time from message injection to routing completion,
	    'xdelay' is the time spent at the routing.

	* utils/listexpand.c, utils/Makefile.in:
	    Added '+ezlml' option, changed the low limit at
	    the -bundlesize -- and set its default to 6000!
	    Also re-learned that 'skip821address()' can only
	    be used with *valid* addresses,  rfc821_path2()
	    is for possibly invalid input scanning!

2001-02-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Version 2.99.55  (the real release!)

	* router/functions.c:
	    At  $(listaddresses ..) and $(listexpand ..)  functions,
	    removed the '"%1"@..' type substitutions with '-l' option.
	    See the comment about '-%' at 'relation' function below.
	
2001-02-20  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/agenda.c, scheduler/scheduler.c, scheduler/mq2.c,
	  smtpserver/smtpetrn.c:
	    Report the ETRN information with contactee's IP address, and
	    timestamp when writing it into the scheduler's log.

	* proto/newdbprocessor.in, proto/db/dbases.conf, man/router.8,
	  proto/cf/fqdnalias.cf, router/db.c, router/functions.c:
	    Add '-%' option to the 'relation' routine to control, when
	    looked up data contained '%0' thru '%9' may get substituted.

	* proto/Makefile.in:
	    Remove at 'distclean' files which are autoconf generated.

2001-02-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/getmxrr.c:
	    Format printing of '%s' with NULL argument -> NULL referral -> ...

	* scheduler/mailq.c:
	    When doing some slow  'mailq -vv', and using MAILQv2, do
	    query all data out of the scheduler before poking into
	    the files (which may be a lot).  Limit the time of inter-